change to home page

--- a/NBDProject2024/Views/Home/Index.cshtml
+++ b/NBDProject2024/Views/Home/Index.cshtml
@@ -37,6 +37,10 @@
         <p><a class="btn btn-primary" asp-area="" asp-controller="Bids" asp-action="Index">Bid</a></p>
     </div><!-- /.col-lg-4 -->
     </div>
+
+    <!--div to push blocks up and add some space at the bottom-->
+    <div style="height: 50px;"></div>
+
 </div><!-- /.row -->
 
 <script>
