Fixed error when adding new bid

--- a/NBDProject2024/Views/Bids/Create.cshtml
+++ b/NBDProject2024/Views/Bids/Create.cshtml
@@ -4,7 +4,7 @@
 <hr />
 <partial name="_addLabourModal" />
 <partial name="_addMaterialModal" />
-<partial name="_ExampleModal" />
+<!--<partial name="_ExampleModal" />-->
 
 <form asp-action="Create" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
