--- a/NBDProject2024/Views/Bids/Details.cshtml
+++ b/NBDProject2024/Views/Bids/Details.cshtml
@@ -50,15 +50,19 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.BidDate)
                 </dd>
-                
-                
-
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.Project.ProjectName)
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Project.ProjectName)
                 </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.BidApproval)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.BidApproval)
+                </dd>
+
                 <!--Add Material, labours Totals-->
             </dl>
 
