--- a/NBDProject2024/Views/Bids/Edit.cshtml
+++ b/NBDProject2024/Views/Bids/Edit.cshtml
@@ -16,11 +16,12 @@
                         <input asp-for="BidDate" class="form-control" />
                         <span asp-validation-for="BidDate" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="ProjectID" class="control-label"></label>
-                <select asp-for="ProjectID" class="form-control" asp-items="ViewBag.ProjectID" id="dropdownProjects"></select>
-                        <span asp-validation-for="ProjectID" class="text-danger"></span>
+                     <div class="form-check">
+                    <input asp-for="BidApproval" class="form-check-input" />
+                    <label class="form-check-label" asp-for="BidApproval"></label>
                     </div>
+                    <span asp-validation-for="BidApproval" class="text-danger"></span>
+
                 </div>
 
                  <hr />
