--- a/NBDProject2024/wwwroot/css/home.css
+++ b/NBDProject2024/wwwroot/css/home.css
@@ -9,13 +9,24 @@
     cursor: pointer;
     padding: 10px;
     background-color: #F0F0F0;
+    display: flex;
+    justify-content: space-between;
+}
+.collapsible-header p {
+    margin: 0;
 }
 
 .collapsible-header:hover {
-    background-color: #80EAFF;
+    background-color: #E0E0E0;
 }
+
 
 .collapsible-content {
     padding: 0 10px;
     display: none;
+}
+
+.info-text {
+    display: inline-block;
+    margin-left: 5px;
 }
