--- a/NBDProject2024/Views/Employee/Index.cshtml
+++ b/NBDProject2024/Views/Employee/Index.cshtml
@@ -83,7 +83,7 @@
                 <td class="text-center">
                     <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-sm btn-outline-primary"
                         role="button" data-bs-toggle="tooltip" title="Edit @ViewData["ControllerFriendlyName"]">
-                        &#x270; Edit
+                        &#x270E; Edit
                     </a>
 
                     @if(item.NumberOfPushSubscriptions > 0)
