--- a/NBDProject2024/Views/Clients/_ListOfProjects.cshtml
+++ b/NBDProject2024/Views/Clients/_ListOfProjects.cshtml
@@ -4,9 +4,12 @@
 
     <div class="panel-heading">
         <h4 class="panel-title">List of Projects</h4>
-
+        @if (User.IsInRole("Admin") || User.IsInRole("Supervisor") || User.IsInRole("Designer"))
+        {
+            
         <a asp-controller="Projects" asp-action="Create" asp-route-id="@Model" class="btn btn-outline-success" fdprocessedid="k03am" data-bs-toggle="tooltip" title="Create a new project">Add Project</a>
 
+        }
     </div>
     <div class="panel-body scrollable-panel">
         <table class="table table-striped">
