--- a/NBDProject2024/Views/Employee/Index.cshtml
+++ b/NBDProject2024/Views/Employee/Index.cshtml
@@ -24,7 +24,7 @@
             </th>
         
             <th>
-                @Html.DisplayNameFor(model => model.Position)
+                <label>Area</label>
             </th>
         
            
