--- a/NBDProject2024/Views/Projects/Index.cshtml
+++ b/NBDProject2024/Views/Projects/Index.cshtml
@@ -83,9 +83,19 @@
                 <th>
                     <input type="submit" name="actionButton" value="City" class="btn btn-link " data-bs-toggle="tooltip" title="Sort by city" />
                 </th>
+                @if (User.IsInRole("Sales"))
+                {
+                   <th class="text-center">
+                       <label>Details</label>
+                   </th>
+                }
+                else
+                {
+                    
                 <th class="text-center">
                     <a asp-action="Create" class="btn btn-outline-success" fdprocessedid="k03am" data-bs-toggle="tooltip" title="Create a new project">Add Project</a>
                 </th>
+                }
             </tr>
         </thead>
 
@@ -113,9 +123,17 @@
                     </td>
                     <!--CRUD buttons-->
                     <td class="text-center">
-                        <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-outline-primary" fdprocessedid="t6a41e" data-bs-toggle="tooltip" title="Edit Project">&#x270E;</a>
-                        <a asp-controller="ProjectBid" asp-action="Index" asp-route-ProjectID="@item.ID" class="btn btn-outline-primary" fdprocessedid="rpbgq" data-bs-toggle="tooltip" title="Project Details">&#x1F50E;</a>
-                        <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-outline-danger" fdprocessedid="a09td" data-bs-toggle="tooltip" title="Delete Project">&#x274C;</a>
+                        @if (User.IsInRole("Sales"))
+                        {
+                            <a asp-controller="ProjectBid" asp-action="Index" asp-route-ProjectID="@item.ID" class="btn btn-outline-primary" fdprocessedid="rpbgq" data-bs-toggle="tooltip" title="Project Details">&#x1F50E;</a>
+                        }
+                        else
+                        {
+                            <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-outline-primary" fdprocessedid="t6a41e" data-bs-toggle="tooltip" title="Edit Project">&#x270E;</a>
+                            <a asp-controller="ProjectBid" asp-action="Index" asp-route-ProjectID="@item.ID" class="btn btn-outline-primary" fdprocessedid="rpbgq" data-bs-toggle="tooltip" title="Project Details">&#x1F50E;</a>
+                            <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-outline-danger" fdprocessedid="a09td" data-bs-toggle="tooltip" title="Delete Project">&#x274C;</a>
+                        }
+                       
                     </td>
 
                 </tr>
